[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wifi-jammer-location"
version = "0.1.0"
description = "WiFi jammer / deauth monitor: relay, nodes, and dashboard for RF and deauth events"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Eric Hoy"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "requests>=2.31.0",
    "pythonping>=1.1.4",
    "dnspython>=2.4.2",
    "pyyaml>=6.0.1",
    "pyserial>=3.5",
    "beautifulsoup4>=4.12.2",
    "lxml>=4.9.3",
    "dash>=2.14.0",
    "plotly>=5.17.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.7.0",
    "ruff>=0.0.287",
]

[tool.uv]
python = "3.11"

[tool.setuptools]
packages = ["wjl"]

[tool.setuptools.package-dir]
"" = "src"
